deploy-bookmedik-prack8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookmedik
  labels:
    app: bookmedik
    tier: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bookmedik
      tier: frontend
  template:
    metadata:
      labels:
        app: bookmedik
        tier: frontend
    spec:
      containers:
      - name: bookmedik-prack8s
        image: githubemail1asir/bookmedik:v1_3
        ports:
          - name: bookmedik-port
            containerPort: 80
