deploy-mariadb-prack8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  labels:
    app: mariadb
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
      tier: backend
  template:
    metadata:
      labels:
        app: mariadb
        tier: backend
    spec:
      volumes:
        - name: mariadb-data
          persistentVolumeClaim:
            claimName: pvc-mariadb-prack8s
      containers:
        - name: mariadb-prack8s
          image: mariadb:10.5
          ports:
            - name: mariadb-port
              containerPort: 3306
          volumeMounts:
            - mountPath: "/var/lib/mysql"
              name: mariadb-data
