svc-bookmedik-prack8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookmedik
  labels:
    app: bookmedik
    tier: frontend
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: bookmedik-port
  selector:
    app: bookmedik
    tier: frontend
