ingress-bookmedik-prack8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-bookmedik-prack8s
spec:
  rules:
  - host: bookmedik.prack8s.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bookmedik
            port:
              number: 80
